# trustify

./: Cargo.toml
common/src/db/: mod.rs
dev/bench/: data.js
docs/adrs/: 00012-enterprise-contract-integration.md  00014-enterprise-contract-integration.md  00018-policy-management.md  00020-policy-management.md
docs/design/: README.md  architecture.md  data-model.md  domain-model.md  generate-diagrams.sh
entity/: Cargo.toml
entity/src/: advisory.rs  lib.rs  organization.rs  product_status.rs  sbom.rs
graphql/: Cargo.toml  README.md
graphql/src/: handlers.rs  main.rs
graphql/src/schema/: advisory.rs  mod.rs  organization.rs  query.rs  sbom.rs
graphql/src/schemas/: advisory.rs  mod.rs  package.rs  root.rs  sbom.rs  vulnerability.rs
migration/src/: lib.rs  m0001220_improve_product_status.rs
modules/fundamental/src/vulnerability/model/details/: vulnerability_advisory.rs
modules/graph/src/graph/advisory/: advisory_vulnerability.rs  mod.rs
modules/graph/src/graph/package/: mod.rs
modules/graph/src/graph/sbom/: mod.rs
modules/graph/src/graph/vulnerability/: mod.rs
modules/ingestor/src/graph/advisory/: mod.rs  product_status.rs
modules/ingestor/src/graph/sbom/: mod.rs
modules/ingestor/src/service/advisory/csaf/: loader.rs
modules/ingestor/src/service/advisory/osv/: loader.rs
